# vc_testing

./: .pre-commit-config.yaml  keys.yaml  pyproject.toml  pytest.ini  startup_local.sh
.github/workflows/: ci.yml  pre-commit_autoupdate.yml
src/: __init__.py
src/zero_shot_classifier/: classification.py  internet_search.py
tests/: test_myproject.py
