[tool.poetry]
name = "vc_test"
version = "0.1.0"
description = "template"
authors = ["tomo <tomoyuki.tsuyaman@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12.4"
google-api-python-client = "^2.173.0"
bs4 = "^0.0.2"
chardet = "^5.2.0"
lxml = {extras = ["html-clean"], version = "^5.4.0"}
lxml-html-clean = "^0.4.2"
google-generativeai = "^0.8.5"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
isort = "^6.0.1"
pytest-cov = "^5.0.0"
pytest-mypy = "^0.10.0"
pytest-mock = "^3.7.0"
pre-commit = "^3.0.4"
ruff = "^0.4.4"
ipykernel = "^6.29.4"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.4.20250611"
types-pyyaml = "^6.0.12.20250516"

[tool.mypy]
disallow_any_explicit = false
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-v --mypy -p no:warnings --cov=myproject --cov-report=html --doctest-modules --ignore=myproject/__main__.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF"  # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D100", "D104"] # Missing docstring in public module, Missing docstring in public package

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 4
